--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 == ACTIONS ==
 + src/page/threads/thread/__init__.py : A page that details a thread
++ src/page/pasties/pasties_atom/__init__.py : An atom of the latest pastes
 + src/smoid/java.py : Support java
 + src/smoid/csharp.py : Support c#
 + src/smoid/c.py : Support C
@@ -8,4 +9,6 @@
 == PROJECTS ==
 src/smoid.py : Improve language detection
 src/smoid.py : Should also detect licenses
+Make users able to create accounts
+Create a logger for datastore queries (http://code.google.com/appengine/articles/hooks.html)
 
