--- a/TODO
+++ b/TODO
@@ -1,10 +1,11 @@
 == ACTIONS ==
++ src/page/pasties/remote_diff : Diff with a remote file
+
+== PROJECTS ==
 + src/smoid/java.py : Support java
 + src/smoid/csharp.py : Support c#
 + src/smoid/c.py : Support C
 + src/smoid/cpp.py : Support C++
-
-== PROJECTS ==
 src/smoid.py : Improve language detection
 src/smoid.py : Should also detect licenses
 Make users able to create accounts
